# AircraftWorth

./: .gitignore  README.md  magiclink.md  package.json  pnpm-lock.yaml
backend/: README_OLD.md  main.py  pyproject.toml
backend/aircraftworth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/api/: intelligence.py
backend/models/: marketplace.py
backend/routers/: auth.py  marketplace.py  marketplace_purchases.py
backend/scripts/: create_ftt_token.py  demo_script.md  test_groq.py  test_neuron_live.py
backend/services/: auth_service.py  hedera_marketplace_service.py  marketplace_service.py  mlat_pipeline.py  supabase_service.py
backend/supabase/: marketplace_schema.sql  schema.sql  users_schema.sql
backend/supabase/migrations/: add_ai_fields.sql
contracts/: AircraftMarketplace.sol  EscrowService.sol  README.md  ReputationSystem.sol  contracts.json  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/abis/: AircraftMarketplace.json  EscrowService.json  ReputationSystem.json
contracts/deployments/: testnet.json
contracts/scripts/: compile.ts  convert-key.js  deploy-final.ts  deploy-hedera-sdk.ts  deploy-real-contracts.ts
frontend/: .gitignore  README.md  README_OLD.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/api/auth/magic-link/: route.ts
frontend/app/api/auth/verify/: route.ts
frontend/app/api/groq/: route.ts
frontend/app/api/marketplace/purchase/: route.ts
frontend/app/api/marketplace/sensors/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/earnings/: page.tsx
frontend/app/dashboard/marketplace/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/mlat/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: ClientOnlyWrapper.tsx  aircraft-map.tsx  magic-link-modal.tsx
frontend/components/brand/: logo.tsx
frontend/components/contracts/: MarketplaceIntegration.tsx
frontend/components/dashboard/: SubscriptionList.tsx
frontend/components/demo/: HederaProofStrip.tsx  JudgeBanner.tsx  KpiStrip.tsx  ReplayToggle.tsx
frontend/components/hedera/: HederaWalletConnector.tsx
frontend/components/intelligence/: FlightQueryBar.tsx  GhostIntelPanel.tsx
frontend/components/landing/: footer.tsx  hero-section.tsx
frontend/components/marketplace/: HederaWalletConnector.tsx  OfferingCard.tsx  PurchaseModal.tsx  SensorMarketMap.tsx  WalletConnectButton.tsx
frontend/lib/: demo-data.ts  groq-client.ts
frontend/types/: marketplace.ts
sdk/: PUBLISH.md  README.md
sdk/hedera-logger/: README.md  jest.config.json  package-lock.json  package.json  tsconfig.json
sdk/hedera-logger/src/: contracts.ts  index.ts  logger.ts  types.ts
sdk/hedera-logger/tests/: logger.test.ts  setup.ts
sdk/mlat-core/: LICENSE  README.md  pyproject.toml
sdk/mlat-core/src/mlat_core/: __init__.py  calculator.py  contracts.py  solver.py
sdk/mlat-core/tests/: test_mlat.py
sdk/neuron-client/: README.md  pyproject.toml
sdk/neuron-client/src/neuron_client/: __init__.py  client.py  contracts.py
sdk/neuron-client/tests/: test_client.py
