[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aircraftworth-mlat"
version = "0.1.0"
description = "TDOA multilateration solver for distributed aircraft tracking. Pure Python, no external dependencies beyond scipy/numpy."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "AircraftWorth", email = "team@aircraftworth.io" }
]
keywords = [
  "mlat", "multilateration", "tdoa", "aircraft", "adsb",
  "mode-s", "aviation", "depin", "neuron", "sensor-network"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage   = "https://github.com/aircraftworth/mlat-core"
Repository = "https://github.com/aircraftworth/mlat-core"
Issues     = "https://github.com/aircraftworth/mlat-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlat_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
