[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aircraftworth-neuron"
version = "0.1.0"
description = "Async Python client for Neuron/4DSky distributed Mode-S sensor network."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "AircraftWorth", email = "team@aircraftworth.io" }
]
keywords = [
  "neuron", "4dsky", "mode-s", "adsb", "aviation", 
  "sensor-network", "depin", "async", "python"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.8.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "aioresponses>=2.0.0",
]

[project.urls]
Homepage   = "https://github.com/aircraftworth/neuron-client"
Repository = "https://github.com/aircraftworth/neuron-client"
Issues     = "https://github.com/aircraftworth/neuron-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neuron_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
